  a single tab distance can be set though.
- Deactivated refcounting checks when running under leopard for the toolbar implementation
  as the implementation there seems to be different.
- Fixed 'Reopen' application behaviour (a window was not always shown when reopening the app).


2.8.8
-----

All (GUI):

- Added wxWindow::GetNextSibling() and GetPrevSibling()


2.8.7
-----

- Added an optimization to UI updates on idle, by only updating when the window
  is shown.
- Multiple centre panes in wxAUI can now be resized.
- Add support for reading alpha data from TIFF images.

wxMSW:

- Fixed a bug with a spurious border appearing on wxStatusBar under Windows XP/Vista.

wxGTK:

- Fixed wxSpinCtrl problem not reporting the correct value
  after calling SetValue().
- Fixed problem with key events sometimes being sent to
  parent window. This also solves a problem with being able
  to change the selection of a wxListCtrl while editing a
  label.
- Correct context menu event coming from wxListCtrl to
  have the right ID (not that from the client window).

wxMac:

- Fixed a crash in wxToolBar when adding tools with non-standard sizes.


2.8.6
-----

All:

- Fixed another bug in wxFileConfig when deleting entries (Axel Gembe)
- Added Portuguese translation (Antonio Cardoso Martins)


2.8.5
-----

All (GUI):

- Added colour normalization to PNM image handler (Ray Johnston).
- Fixed selecting part of word from right to left in wxHTML (Michael Hieke).
- Selecting text in wxHTML with character precision was made easier, it's
  enough to select half of a character (Michael Hieke).
- Significantly improved startup times of XRC-based applications using
  embedded resources on Unix (requires resources recompilation).
- Fixed freeing of "static" alpha data in wxImage (Axel Gembe).
- Added tab mouse click events to wxAuiNotebook (Ben Williams).
- Option for middle-click tab close in wxAuiNotebook (Ben Williams).